Extract compilation unit creation to a Factory